// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`SCSS\` asset generator renders SCSS correctly with \`selector\` option 1`] = `
"@import \\"variables\\";

$test-font: \\"test\\";

@font-face {
    font-family: $test-font;
    src: \\"::src-attr::\\";
}

.my-selector:before {
    font-family: $test-font !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

$test-map: (
    \\"my-icon\\": \\"\\\\f101\\",
);

.my-selector.tf-my-icon:before {
    content: $tf-my-icon;
}
"
`;

exports[`\`SCSS\` asset generator renders SCSS correctly with prefix and tag name options 1`] = `
"@import \\"variables\\";

$test-font: \\"test\\";

@font-face {
    font-family: $test-font;
    src: \\"::src-attr::\\";
}

[class^=\\"tf-\\"]:before, [class*=\\" tf-\\"]:before {
    font-family: $test-font !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

$test-map: (
    \\"my-icon\\": \\"\\\\f101\\",
);

.tf-my-icon:before {
    content: $tf-my-icon;
}
"
`;
